<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffc8c8c8">

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/rjxx_detail_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_rjid"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/rjid"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:background="#ffc8c8c8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_kqpnumber"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/kqpnumber"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:background="#ffc8c8c8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_kqpname"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/kqpname"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_kqtypeDesc"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/kqtypeDesc"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:background="#ffc8c8c8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_datafromDesc"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/datafromDesc"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_kqtime"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/kqtime"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:background="#ffc8c8c8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_kqdept"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/kqdept"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:background="#ffc8c8c8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_kqbenci"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/kqbenci"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#ffffff"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_downtime"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/downtime"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:background="#ffc8c8c8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_uptime"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/uptime"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:background="#ffc8c8c8" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/rjxx_worktime"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/worktime"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginRight="10dp"
                        android:gravity="right"
                        android:textColor="#ffc8c8c8"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>